--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":"server=localhost;userid=developer;password=1234;database=lanchesdatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
