Implementacao do gerenciamento de imagens
criado as view/controller para adicionar/visualizar/deletar imagens

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConfigurationPastaImagens": {
+    "NomePastaImagensProdutos": "images/produtos"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;userid=developer;password=1234;database=lanchesdatabase"
   },
